use flex and no float

--- a/responsive.css
+++ b/responsive.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
 }
 
-.content {
+.work ul {
   display: flex;
   flex-wrap: wrap;
 }
@@ -39,7 +39,6 @@
 
   .work__item {
     width: 50%;
-    float: left;
   }
 
 }
@@ -60,7 +59,7 @@
     width: 33.333333%;
   }
 
-  .work__item a{
+  .work__item a {
     font-size: 12px;
   }
 
