--- a/responsive.css
+++ b/responsive.css
@@ -64,3 +64,14 @@
   }
 
 }
+
+@media screen and (min-width: 850px) {
+  
+  main, .header__inner {
+    width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
+
